# usagi-codex-agents

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  go.mod  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
cmd/usagi-corp/: main.go
examples/: .usagi.yml  org.toml  profiles.toml  usagi.runtime.toml
examples/memories/: boss.md  ghost_boss.md  secretary.md
examples/personalities/: boss.md  ghost_boss.md  secretary.md
examples/sample-offline/: README.md  report.md
internal/autopilot/: autopilot.go  autopilot_test.go
scripts/: smoke-test.sh
specs/: fizzbuzz.md  hands-on-minitop.md  sample.md  watch-sample.md
src/: cli.ts  openaiClient.ts  run.ts  spec.ts  usagiPipeline.ts
tests/: conftest.py  test_approval.py  test_approval_pipeline_offline.py  test_artifacts.py  test_auth_profiles.py  test_autopilot.py  test_boss_inbox.py  test_boss_inbox_drain.py  test_cli_backend.py  test_compress.py  test_config.py  test_demo.py  test_demo_org_align.py  test_discord_format.py  test_display.py  test_git_ops.py  test_github_ops.py  test_llm_backend.py  test_llm_backend_cli.py  test_mailbox.py  test_mcp_stdin.py  test_org.py  test_pipeline_offline.py  test_profiles.py  test_report.py  test_runtime.py  test_runtime_worker_pool.py  test_smoke_local.py  test_spec.py  test_startup_check.py  test_state.py  test_tokens.py  test_tui_chat.py  test_tui_display.py  test_tui_focus_status.py  test_tui_import.py  test_tui_inputs_delete.py  test_tui_inputs_stable.py  test_tui_layout_no_overlap.py  test_tui_org.py  (+9 more)
(+79 files in other folders)
